--- a/index.html
+++ b/index.html
@@ -87,38 +87,38 @@
     <form id="applicantForm">
       <div class="row">
         <div class="col-md-6 form-group">
-          <label>Applicant Name:</label>
+          <label>Applicant Name <span style="color: red;">*</span></label>
             <input type="text" class="form-control" name="name" required>
         </div>
         <div class="col-md-6 form-group">
-          <label>Marital Status:</label>
-            <input type="text" class="form-control" name="maritalStatus">
+          <label>Marital Status <span style="color: red;">*</span></label>
+            <input type="text" class="form-control" name="maritalStatus" required>
           
         </div>
       </div>
       <div class="row">
         <div class="col-md-12 form-group">
-          <label>Canadian Address:</label>
-            <input type="text" class="form-control" name="address">
+          <label>Canadian Address <span style="color: red;">*</span></label>
+            <input type="text" class="form-control" name="address" required>
           
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 form-group">
           <label>
-            Date of Birth:
+            Date of Birth <span style="color: red;">*</span>
           </label>
-            <input type="date"  class="form-control" name="dateOfBirth">
+            <input type="date"  class="form-control" name="dateOfBirth" required>
         </div>
         <div class="col-md-6 form-group">
-          <label>Email:</label>
-          <input type="email"  class="form-control" name="email">  
+          <label>Email <span style="color: red;">*</span></label>
+          <input type="email"  class="form-control" name="email" required>  
         </div>
       </div>
       <div class="row">
         <div class="col-md-12 form-group">
-          <label>Canadian Phone Number:</label>
-          <input type="tel"  class="form-control" name="phone">
+          <label>Canadian Phone Number <span style="color: red;">*</span></label>
+          <input type="tel"  class="form-control" name="phone" required>
         </div>
       </div>
       <div class="row">
